[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoleadgen"
version = "0.1.0"
description = "Minimal, runnable lead-gen pipeline with LangGraph + CrewAI integrations."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "AutoLeadGen Contributors" }]

dependencies = [
  "crewai>=1.6.0,<2.0.0",
  "langgraph>=1.0.0,<2.0.0",
  "langchain-community>=0.3.0,<0.5.0",
  "playwright==1.40.0",
  "beautifulsoup4==4.12.2",
  "requests>=2.31.0,<3",
  "firecrawl-py==4.10.5",
  "pandas==2.1.4",
  "numpy==1.26.3",
  "sqlalchemy>=2.0.27,<3",
  "pydantic>=2.5.2,<3",
  "python-dotenv>=1.1.1,<2",
  "aiohttp==3.9.1",
  "tqdm==4.67.0",
  "python-dateutil==2.8.2",
  "pytz==2024.1",
  "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
  "black==23.12.1",
  "flake8==6.1.0",
  "mypy==1.7.1",
]

[project.scripts]
autoleadgen = "autoleadgen.cli:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["autoleadgen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py312"]
